# moringa-tribune

./: db.sqlite3  pyproject.toml
news/: admin.py  email.py  forms.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
news/email/: newsemail.html  newsemail.txt
news/migrations/: 0001_initial.py  0002_tags_alter_editor_options.py  0003_article.py  0004_editor_phone_number.py  0005_article_article_image.py  0006_newsletterrecipients.py  0007_alter_article_editor_delete_editor.py  0008_alter_article_post.py  0009_moringamerch.py
news/templates/: navbar.html  new_article.html  welcome.html
news/templates/all-news/: article.html  base.html  past-news.html  today-news.html
news/templates/registration/: base.html  login.html  registration_form.html
static/js/: newsletter.js
tribune/: asgi.py  settings.py  urls.py  wsgi.py
