[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["ivymmurithi <ivymurithi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
psycopg2 = "^2.9.3"
Pillow = "^9.0.1"
django-crispy-forms = "^1.14.0"
django-tinymce = "^3.4.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
